Fixed overflow

--- a/client/src/app/frontpage/frontpage.styl
+++ b/client/src/app/frontpage/frontpage.styl
@@ -1,8 +1,11 @@
 .frontpage-wrapper
-	background url('/img/frontpage.jpg') no-repeat
-	height 600px
-	width 100%
-	z-index 1
-	position absolute
-	top 0
-	background-size 100%
+	background-image: url("/img/frontpage.jpg");
+	background-repeat: no-repeat;
+	background-clip: border-box;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	background-attachment: fixed;
+	background-size: 100%;
