--- a/client/src/app/index.styl
+++ b/client/src/app/index.styl
@@ -112,7 +112,6 @@ a
 
 .container-fluid
 	padding 0 25px
-	overflow hidden
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
